# AuraFits-InventoryApp

./: README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src/: App.jsx  aura-fits-app.jsx  index.css  main.jsx  tauriDb.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
~/.tauri/: aura-fits.key  aura-fits.key.pub
